Initial simple version, listing modules

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,14 @@ classifier =
 packages =
     deep_oc_client
 
+[entry_points]
+console_scripts = 
+    deep-oc = deep_oc_client.shell:main
+
+deep-oc.cli=
+    module_list = deep_oc_client.cmd.modules:ModuleList
+    module_ls = deep_oc_client.cmd.modules:ModuleList
+
 [build_sphinx]
 source-dir = doc/source
 build-dir = doc/build
