Add command to show information about a module

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,7 @@ console_scripts =
 deep-oc.cli=
     module_list = deep_oc_client.cmd.modules:ModuleList
     module_ls = deep_oc_client.cmd.modules:ModuleList
+    module_show = deep_oc_client.cmd.modules:ModuleShow
 
 [build_sphinx]
 source-dir = doc/source
